feat: Add frontend contract editing interface and correct company info
- Add contract_edit_view for staff to edit contracts in frontend (not Django admin)
- Create contract_edit.html template with date pickers, payment schedule display
- Add 'Edit Contract' link in estimate_detail.html when contract exists
- Update COMPANY_INFO everywhere with correct details:
  * Kibray Paint & Stain LLC
  * P.O. Box 25881, Silverthorne, CO 80497
  * (970) 333-4872
  * jduran@kibraypainting.net
  * kibraypainting.net
- Update default company values in PDF templates
- URL route: /contracts/edit/<contract_id>/

--- a/core/templates/core/colorsample_signed_pdf.html
+++ b/core/templates/core/colorsample_signed_pdf.html
@@ -430,14 +430,14 @@
     <!-- Letterhead -->
     <div class="letterhead">
         <div class="letterhead-left">
-            <div class="company-name">{{ company.name|default:"KIBRAY PAINTING" }}</div>
+            <div class="company-name">{{ company.name|default:"KIBRAY PAINT & STAIN LLC" }}</div>
             <div class="company-tagline">Color Sample Approval</div>
         </div>
         <div class="letterhead-right">
             <div class="company-contact">
-                {{ company.address|default:"North Carolina, USA" }}<br>
-                {{ company.email|default:"info@kibray.com" }}<br>
-                {{ company.website|default:"www.kibray.com" }}
+                {{ company.address|default:"P.O. Box 25881, Silverthorne, CO 80497" }}<br>
+                {{ company.email|default:"jduran@kibraypainting.net" }}<br>
+                {{ company.website|default:"kibraypainting.net" }}
             </div>
         </div>
     </div>
