--- a/core/templates/core/changeorder_signed_pdf.html
+++ b/core/templates/core/changeorder_signed_pdf.html
@@ -374,15 +374,15 @@
     <!-- Letterhead -->
     <div class="letterhead">
         <div class="letterhead-left">
-            <div class="company-name">{{ company.name|default:"KIBRAY PAINTING" }}</div>
+            <div class="company-name">{{ company.name|default:"KIBRAY PAINT & STAIN LLC" }}</div>
             <div class="company-tagline">{{ company.license|default:"Licensed & Insured" }}</div>
         </div>
         <div class="letterhead-right">
             <div class="company-contact">
-                {{ company.address|default:"North Carolina, USA" }}<br>
+                {{ company.address|default:"P.O. Box 25881, Silverthorne, CO 80497" }}<br>
                 {% if company.phone %}{{ company.phone }}<br>{% endif %}
-                {{ company.email|default:"info@kibray.com" }}<br>
-                {{ company.website|default:"www.kibray.com" }}
+                {{ company.email|default:"jduran@kibraypainting.net" }}<br>
+                {{ company.website|default:"kibraypainting.net" }}
             </div>
         </div>
     </div>
